Making base CSS styles and Header HTML

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -2,11 +2,39 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/CSS/reset.css">
+    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <title>Host Beta</title>
 </head>
 <body>
-    
+    <header class="header">
+        <span class="logo">Host Beta</span>
+        <img src="assets/img/Header-section/Hamburguer Menu.svg" alt="" class="header__menu--button">
+        <ul class="header__menu">
+            <li class="header__menu--item">
+                <a href="#" class="menu__item--link">Home</a>
+            </li>
+            <li class="header__menu--item">
+                <a href="#about-us" class="menu__item--link">About Us</a>
+            </li>
+            <li class="header__menu--item">
+                <a href="#services" class="menu__item--link">Service</a>
+            </li>
+            <li class="header__menu--item">
+                <a href="#prices" class="menu__item--link">Prices</a>
+            </li>
+            <li class="header__menu--item">
+                <a href="#testimonial" class="menu__item--link">Testimonial</a>
+            </li>
+        </ul>
+        <nav class="navbar">
+
+        </nav>
+    </header>
 </body>
 </html>
