Header - making mobile nav
Making the mobile header navbar with a burguer menu

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -12,29 +12,31 @@
     <title>Host Beta</title>
 </head>
 <body>
-    <header class="header">
-        <span class="logo">Host Beta</span>
-        <img src="assets/img/Header-section/Hamburguer Menu.svg" alt="" class="header__menu--button">
-        <ul class="header__menu">
-            <li class="header__menu--item">
-                <a href="#" class="menu__item--link">Home</a>
-            </li>
-            <li class="header__menu--item">
-                <a href="#about-us" class="menu__item--link">About Us</a>
-            </li>
-            <li class="header__menu--item">
-                <a href="#services" class="menu__item--link">Service</a>
-            </li>
-            <li class="header__menu--item">
-                <a href="#prices" class="menu__item--link">Prices</a>
-            </li>
-            <li class="header__menu--item">
-                <a href="#testimonial" class="menu__item--link">Testimonial</a>
-            </li>
-        </ul>
+    <header>
+        <div class="header">
+            <span class="logo">Host Beta</span>
+            <img src="assets/img/Header-section/Hamburguer Menu.svg" alt="" class="header__menu--button">
+        </div>
         <nav class="navbar">
-
+            <ul class="header__menu">
+                <li class="header__menu--item">
+                    <a href="#" class="menu__item--link">Home</a>
+                </li>
+                <li class="header__menu--item">
+                    <a href="#about-us" class="menu__item--link">About Us</a>
+                </li>
+                <li class="header__menu--item">
+                    <a href="#services" class="menu__item--link">Service</a>
+                </li>
+                <li class="header__menu--item">
+                    <a href="#prices" class="menu__item--link">Prices</a>
+                </li>
+                <li class="header__menu--item">
+                    <a href="#testimonial" class="menu__item--link">Testimonial</a>
+                </li>
+            </ul>
         </nav>
     </header>
+    <script src="assets/JS/main.js"></script>
 </body>
 </html>
