Intro - creating the section HTML base
Making the intro section HTML base with 2 containers flex and 2 grid containers

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -37,6 +37,52 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="intro">
+            <h2 class="intro__title section__title">WELCOME TO HOST BETA</h2>
+            <h1 id="page--title" class="intro__subtitle section__subtitle">Smart Company
+                <br>With Perfect
+                <br>Web Space</h1>
+            <p class="intro__description section__description">Lorem ipsum dolor sit amet, consectetur 
+                adipiscing elit. Cras consectetur adipiscing commodo euismod condimentum nunc.</p>
+            <div class="intro__banner">
+                <ul class="intro__banner--grid">
+                    <li class="intro__banner--item">
+                        <img src="assets/img/Header-section/Header-server-icon.svg" alt="Server" class="banner__item--img">
+                        <h3 class="banner__item--title">Powerfull Server</h3>
+                        <p class="banner__item--desc">Lorem ipsum dolor sit amet</p>
+                    </li>
+                    <li class="intro__banner--item">
+                        <img src="assets/img/Header-section/Header-guard-icon.svg" alt="" class="banner__item--img">
+                        <h3 class="banner__item--title">Premium SSL</h3>
+                        <p class="banner__item--desc">Lorem ipsum dolor sit amet, </p>
+                    </li>
+                    <li class="intro__banner--item">
+                        <img src="assets/img/Header-section/Header-headphone-icon.svg" alt="" class="banner__item--img">
+                        <h3 class="banner__item--title">24/7 Support</h3>
+                        <p class="banner__item--desc">Lorem ipsum dolor sit amet,</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="intro__data--container">
+                <div class="intro__data">
+                    <span class="intro__data--number">800</span>
+                    <p class="intro__data--desc">Positive Reviews</p>
+                </div>
+                <div class="intro__data">
+                    <span class="intro__data--number">550</span>
+                    <p class="intro__data--desc">Active Hosting</p>
+                </div>
+            </div>
+            <div class="intro__buttons">
+                <a href="#" class="prirmary__button">Get Started</a>
+                <a href="#" class="secundary__button">Hosting Plans</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="assets/JS/main.js"></script>
 </body>
 </html>
