Intro - styling the intro section CSS

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -37,6 +37,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="intro">
             <h2 class="intro__title section__title">WELCOME TO HOST BETA</h2>
@@ -52,13 +53,13 @@
                         <h3 class="banner__item--title">Powerfull Server</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet</p>
                     </li>
-                    <li class="intro__banner--item">
-                        <img src="assets/img/Header-section/Header-guard-icon.svg" alt="" class="banner__item--img">
+                    <li class="intro__banner--item ">
+                        <img src="assets/img/Header-section/Header-guard-icon.svg" alt="SSL Security" class="banner__item--img">
                         <h3 class="banner__item--title">Premium SSL</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet, </p>
                     </li>
                     <li class="intro__banner--item">
-                        <img src="assets/img/Header-section/Header-headphone-icon.svg" alt="" class="banner__item--img">
+                        <img src="assets/img/Header-section/Header-headphone-icon.svg" alt="Headphones icon" class="banner__item--img">
                         <h3 class="banner__item--title">24/7 Support</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet,</p>
                     </li>
@@ -80,6 +81,7 @@
             </div>
         </section>
     </main>
+
     <footer>
 
     </footer>
