Intro--Companys - Creating the html base

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -49,17 +49,20 @@
             <div class="intro__banner">
                 <ul class="intro__banner--grid">
                     <li class="intro__banner--item">
-                        <img src="assets/img/Header-section/Header-server-icon.svg" alt="Server" class="banner__item--img">
+                        <img src="assets/img/Header-section/Header-server-icon.svg" 
+                        alt="Server" class="banner__item--img">
                         <h3 class="banner__item--title">Powerfull Server</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet</p>
                     </li>
                     <li class="intro__banner--item ">
-                        <img src="assets/img/Header-section/Header-guard-icon.svg" alt="SSL Security" class="banner__item--img">
+                        <img src="assets/img/Header-section/Header-guard-icon.svg" 
+                        alt="SSL Security" class="banner__item--img">
                         <h3 class="banner__item--title">Premium SSL</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet, </p>
                     </li>
                     <li class="intro__banner--item">
-                        <img src="assets/img/Header-section/Header-headphone-icon.svg" alt="Headphones icon" class="banner__item--img">
+                        <img src="assets/img/Header-section/Header-headphone-icon.svg" 
+                        alt="Headphones icon" class="banner__item--img">
                         <h3 class="banner__item--title">24/7 Support</h3>
                         <p class="banner__item--desc">Lorem ipsum dolor sit amet,</p>
                     </li>
@@ -79,6 +82,27 @@
                 <a href="#" class="prirmary__button">Get Started</a>
                 <a href="#" class="secundary__button">Hosting Plans</a>
             </div>
+        </section>
+        <section class="intro-companys">
+            <h2 class="section__subtitle intro-companys__subtitle">Trusted by 2500+ Company Worldwide</h2>
+            <ul class="intro-companys__list">
+                <li class="intro-companys__company">
+                    <img src="assets/img/Company-section/Company-logo-1.png" 
+                    alt="Greek Logo" class="intro-companys-logo">
+                </li>
+                <li class="intro-companys__company">
+                    <img src="assets/img/Company-section/Company-logo-2.png" 
+                    alt="David Deng Logo" class="intro-companys-logo">
+                </li>
+                <li class="intro-companys__company">
+                    <img src="assets/img/Company-section/Company-logo-3.png" 
+                    alt="Express Logo" class="intro-companys-logo">
+                </li>
+                <li class="intro-companys__company">
+                    <img src="assets/img/Company-section/Company-logo-4.png" 
+                    alt="Natuska Logo" class="intro-companys-logo">
+                </li>
+            </ul>
         </section>
     </main>
 
