Intro--companys - making css styles

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <section class="intro-companys">
-            <h2 class="section__subtitle intro-companys__subtitle">Trusted by 2500+ Company Worldwide</h2>
+            <h2 class="intro-companys__subtitle">Trusted by 2500+<br>Company Worldwide</h2>
             <ul class="intro-companys__list">
                 <li class="intro-companys__company">
                     <img src="assets/img/Company-section/Company-logo-1.png" 
