Abut - creating base section html

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -104,6 +104,20 @@
                 </li>
             </ul>
         </section>
+        <section class="about">
+            <h2 class="section__title about__title">ABOUT HOST BETA</h2>
+            <h3 class="section__subtitle about__subtitle">The Perfect Digital Connection</h3>
+            <p class="section__description about__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur adipiscing.</p>
+            <img src="assets/img/About-section/about-img.png" 
+            alt="A jumping man With a laptop" class="about__banner">
+            <div class="about__specs--grid">
+                <span class="about__specs">Faster Process</span>
+                <span class="about__specs">Faster Delivery</span>
+                <span class="about__specs">Faster Access</span>
+                <span class="about__specs">24/7 Full Support</span>
+            </div>
+            <a href="#" class="prirmary__button">Discover More</a>
+        </section>
     </main>
 
     <footer>
