About - making the styles css

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -116,7 +116,7 @@
                 <span class="about__specs">Faster Access</span>
                 <span class="about__specs">24/7 Full Support</span>
             </div>
-            <a href="#" class="prirmary__button">Discover More</a>
+            <a href="#" class="prirmary__button about__button">Discover More</a>
         </section>
     </main>
 
