--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -83,6 +83,7 @@
                 <a href="#" class="secundary__button">Hosting Plans</a>
             </div>
         </section>
+        
         <section class="intro-companys">
             <h2 class="intro-companys__subtitle">Trusted by 2500+<br>Company Worldwide</h2>
             <ul class="intro-companys__list">
@@ -104,6 +105,7 @@
                 </li>
             </ul>
         </section>
+
         <section class="about">
             <h2 class="section__title about__title">ABOUT HOST BETA</h2>
             <h3 class="section__subtitle about__subtitle">The Perfect Digital Connection</h3>
@@ -117,6 +119,43 @@
                 <span class="about__specs">24/7 Full Support</span>
             </div>
             <a href="#" class="prirmary__button about__button">Discover More</a>
+        </section>
+
+        <section class="services">
+            <h2 class="section__title services__title">OUR SERVICES</h2>
+            <h3 class="section__subtitle services__subtitle"></h3>
+            <ul class="services__list">
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon.png" alt="" class="services__items--icon">
+                    <h4 class="services__items--title">Discover Luxury in Web Hosting</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-1.png" alt="Wordpress Logo" class="services__items--icon">
+                    <h4 class="services__items--title">Wordpress Hosting</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-2.png" alt="Word Wide Web Icon" class="services__items--icon">
+                    <h4 class="services__items--title">Free Domain</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-3.png" alt="Shild security icon" class="services__items--icon">
+                    <h4 class="services__items--title">SSL Service</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-4.png" alt="" class="services__items--icon">
+                    <h4 class="services__items--title">Cloud Hosting</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-5.png" alt="" class="services__items--icon">
+                    <h4 class="services__items--title">Website Hosting</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+            </ul>
         </section>
     </main>
 
