Services - creating the section css styles

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -123,26 +123,26 @@
 
         <section class="services">
             <h2 class="section__title services__title">OUR SERVICES</h2>
-            <h3 class="section__subtitle services__subtitle"></h3>
+            <h3 class="section__subtitle services__subtitle">Discover Luxury in Web Hosting</h3>
             <ul class="services__list">
                 <li class="services__items">
                     <img src="assets/img/Services-section/icon.png" alt="" class="services__items--icon">
-                    <h4 class="services__items--title">Discover Luxury in Web Hosting</h4>
-                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
-                </li>
-                <li class="services__items">
-                    <img src="assets/img/Services-section/icon-1.png" alt="Wordpress Logo" class="services__items--icon">
                     <h4 class="services__items--title">Wordpress Hosting</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon-2.png" alt="Word Wide Web Icon" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon-1.png" alt="Wordpress Logo" class="services__items--icon">
                     <h4 class="services__items--title">Free Domain</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon-3.png" alt="Shild security icon" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon-2.png" alt="Word Wide Web Icon" class="services__items--icon">
                     <h4 class="services__items--title">SSL Service</h4>
+                    <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
+                </li>
+                <li class="services__items">
+                    <img src="assets/img/Services-section/icon-3.png" alt="Shild security icon" class="services__items--icon">
+                    <h4 class="services__items--title">Cloud VPS</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
