Capatibilities - making the HTML estructure and styles css

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -109,7 +109,8 @@
         <section class="about">
             <h2 class="section__title about__title">ABOUT HOST BETA</h2>
             <h3 class="section__subtitle about__subtitle">The Perfect Digital Connection</h3>
-            <p class="section__description about__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur adipiscing.</p>
+            <p class="section__description about__description">Lorem ipsum dolor sit amet, consectetur 
+                adipiscing elit. Cras consectetur adipiscing.</p>
             <img src="assets/img/About-section/about-img.png" 
             alt="A jumping man With a laptop" class="about__banner">
             <div class="about__specs--grid">
@@ -126,22 +127,22 @@
             <h3 class="section__subtitle services__subtitle">Discover Luxury in Web Hosting</h3>
             <ul class="services__list">
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon.png" alt="" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon.png" alt="Wordpress Logo" class="services__items--icon">
                     <h4 class="services__items--title">Wordpress Hosting</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon-1.png" alt="Wordpress Logo" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon-1.png" alt="Word Wide Web Icon" class="services__items--icon">
                     <h4 class="services__items--title">Free Domain</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon-2.png" alt="Word Wide Web Icon" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon-2.png" alt="Shild security icon" class="services__items--icon">
                     <h4 class="services__items--title">SSL Service</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
                 <li class="services__items">
-                    <img src="assets/img/Services-section/icon-3.png" alt="Shild security icon" class="services__items--icon">
+                    <img src="assets/img/Services-section/icon-3.png" alt="" class="services__items--icon">
                     <h4 class="services__items--title">Cloud VPS</h4>
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
@@ -156,6 +157,57 @@
                     <p class="services__items--description">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec.</p>
                 </li>
             </ul>
+        </section>
+        <section class="capatibilities">
+            <h2 class="section__title capatibilities__title">OUR CAPABILITIES</h2>
+            <h3 id="capatibilities__subtitle" class="section__subtitle ">From Skyline to the Shoreline We Are There</h3>
+            <p class="section__description capatibilities__description">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Cras consectetur adipiscing Quisque et imperdiet ipsum. Nunc molestie nunc ac augue sodales luctus..</p>
+            <ul class="capatibilities__topics--list">
+                <li class="capatibilities__topic">
+                    <img src="assets/img/capabilities-section/capatibilities-checked-icon.svg" 
+                    alt="Check icon" class="capatibilities__topic--img">
+                    <span class="capatibilities__topic--text">Unlimited Site</span>
+                </li>
+                <li class="capatibilities__topic">
+                    <img src="assets/img/capabilities-section/capatibilities-checked-icon.svg" 
+                    alt="Check icon" class="capatibilities__topic--img">
+                    <span class="capatibilities__topic--text">Super Turbo Power</span>
+                </li>
+                <li class="capatibilities__topic">
+                    <img src="assets/img/capabilities-section/capatibilities-checked-icon.svg" 
+                    alt="Check icon" class="capatibilities__topic--img">
+                    <span class="capatibilities__topic--text">Unlimited Bandwidth</span>
+                </li>
+                <li class="capatibilities__topic">
+                    <img src="assets/img/capabilities-section/capatibilities-checked-icon.svg" 
+                    alt="Check icon" class="capatibilities__topic--img">
+                    <span class="capatibilities__topic--text">24/7 Full Support More Detail</span>
+                </li>
+            </ul>
+            <ul class="capatibilities__techs--list">
+                <li class="capatibilities__tech">
+                    <img src="assets/img/capabilities-section/wordpress-icon.svg" alt="Wordpress" 
+                    class="capatibilities__tech--img">
+                    <h4 class="capatibilities__tech--title">Wordpress</h4>
+                </li>
+                <li class="capatibilities__tech">
+                    <img src="assets/img/capabilities-section/github-icon.svg" alt="Github" 
+                    class="capatibilities__tech--img">
+                    <h4 class="capatibilities__tech--title">Github</h4>
+                </li>
+                <li class="capatibilities__tech">
+                    <img src="assets/img/capabilities-section/laravel-icon.svg" alt="Laravel" 
+                    class="capatibilities__tech--img">
+                    <h4 class="capatibilities__tech--title">Laravel</h4>
+                </li>
+                <li class="capatibilities__tech">
+                    <img src="assets/img/capabilities-section/elementor-icon.svg" alt="Elementor" 
+                    class="capatibilities__tech--img">
+                    <h4 class="capatibilities__tech--title">Elementor</h4>
+                </li>
+            </ul>
+            <a href="#" class="prirmary__button capatibilities__button">More Detail</a>
         </section>
     </main>
 
