Pricing - Creating the pricing section HTML and CSS styles

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -209,6 +209,57 @@
             </ul>
             <a href="#" class="prirmary__button capatibilities__button">More Detail</a>
         </section>
+        <section class="pricing">
+            <h2 class="section__title pricing__title">Pricing Plans</h2>
+            <h3 class="section__subtitle pricing__subtitle">Hosting With Freedom Built-In</h3>
+            <div class="pricing__container">
+                <h4 class="pricing__container--title">Hatchling Plan</h4>
+                <h5 class="pricing__container--promo">Now 60% off!</h5>
+                <ul class="pricing__container--vantages">
+                    <li class="pricing__container--vantage">Single website </li>
+                    <li class="pricing__container--vantage">One-click WordPress installs</li>
+                    <li class="pricing__container--vantage">Free WordPress/cPanel website transfer</li>
+                    <li class="pricing__container--vantage">Unmetered bandwidth </li>
+                    <li class="pricing__container--vantage">Free SSL certificate </li>
+                    <li class="pricing__container--vantage">Free domain included </li>
+                </ul>
+                <h5 class="pricing__container--title-offer">Introductory offer</h5>
+                <span class="pricing__container--offer">$2.75/mo*</span>
+                <a href="#" class="pricing__button">Buy Now</a>
+            </div>
+            <div class="pricing__container">
+                <h4 class="pricing__container--title">Baby Plan</h4>
+                <h5 class="pricing__container--promo">Now 65% off!</h5>
+                <ul class="pricing__container--vantages">
+                    <li class="pricing__container--vantage">Unlimited websites</li>
+                    <li class="pricing__container--vantage">One-click WordPress installs </li>
+                    <li class="pricing__container--vantage">Free WordPress/cPanel website transfer</li>
+                    <li class="pricing__container--vantage">Unmetered bandwidth </li>
+                    <li class="pricing__container--vantage">Free SSL certificate </li>
+                    <li class="pricing__container--vantage">Free domain included </li>
+                </ul>
+                <h5 class="pricing__container--title-offer">Introductory offer</h5>
+                <span class="pricing__container--offer">$3.50/mo*</span>
+                <a href="#" class="pricing__button">Buy Now</a>
+            </div>
+            <div class="pricing__container">
+                <h4 class="pricing__container--title">Business Plan</h4>
+                <h5 class="pricing__container--promo">Now 65% off!</h5>
+                <ul class="pricing__container--vantages">
+                    <li class="pricing__container--vantage">Unlimited websites</li>
+                    <li class="pricing__container--vantage">One-click WordPress installs</li>
+                    <li class="pricing__container--vantage">Free WordPress/cPanel website transfer</li>
+                    <li class="pricing__container--vantage">Unmetered bandwidth </li>
+                    <li class="pricing__container--vantage">Free SSL certificate </li>
+                    <li class="pricing__container--vantage">Free upgrade to Positive SSL </li>
+                    <li class="pricing__container--vantage">Free SEO tools</li>
+                    <li class="pricing__container--vantage">Free domain included</li>
+                </ul>
+                <h5 class="pricing__container--title-offer">Introductory offer</h5>
+                <span class="pricing__container--offer">$5.25/mo*</span>
+                <a href="#" class="pricing__button">Buy Now</a>
+            </div>
+        </section>
     </main>
 
     <footer>
