Testimonial - Creating the Testimonial section HTML estructure

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -219,9 +219,9 @@
                     <li class="pricing__container--vantage">Single website </li>
                     <li class="pricing__container--vantage">One-click WordPress installs</li>
                     <li class="pricing__container--vantage">Free WordPress/cPanel website transfer</li>
-                    <li class="pricing__container--vantage">Unmetered bandwidth </li>
-                    <li class="pricing__container--vantage">Free SSL certificate </li>
-                    <li class="pricing__container--vantage">Free domain included </li>
+                    <li class="pricing__container--vantage">Unmetered bandwidth</li>
+                    <li class="pricing__container--vantage">Free SSL certificate</li>
+                    <li class="pricing__container--vantage">Free domain included</li>
                 </ul>
                 <h5 class="pricing__container--title-offer">Introductory offer</h5>
                 <span class="pricing__container--offer">$2.75/mo*</span>
@@ -251,7 +251,7 @@
                     <li class="pricing__container--vantage">Free WordPress/cPanel website transfer</li>
                     <li class="pricing__container--vantage">Unmetered bandwidth </li>
                     <li class="pricing__container--vantage">Free SSL certificate </li>
-                    <li class="pricing__container--vantage">Free upgrade to Positive SSL </li>
+                    <li class="pricing__container--vantage">Free upgrade to Positive SSL</li>
                     <li class="pricing__container--vantage">Free SEO tools</li>
                     <li class="pricing__container--vantage">Free domain included</li>
                 </ul>
@@ -259,6 +259,30 @@
                 <span class="pricing__container--offer">$5.25/mo*</span>
                 <a href="#" class="pricing__button">Buy Now</a>
             </div>
+        </section>
+        <section class="testimonial">
+            <h1 class="section__title testimonial__title">testimonial</h1>
+            <h2 class="section__subtitle testimonial__subtitle">What Customers Say About Us</h2>
+            <img src="assets/img/Testimonia-section/Testimonial-video-img.png" alt="video" class="testimonial__img-video">
+            <div class="testimonial__container">
+                <img src="assets/img/Testimonia-section/testimonial-stars.png" alt="feedback stars" class="testimonial__container--stars">
+                <p class="testimonial__container--text">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec Lorem ipsum dolor sit amet, consec tetur</p>
+                <div class="testimonial__container--perfil">
+                    <img src="assets/img/Testimonia-section/testimonial-stars.png" alt="Caleb Paul avatar image" class="testimonial__container--img">
+                    <h4 class="testimonial__container--name">Caleb Paul</h4>
+                    <span class="testimonial__container--work">Company CEO</span>
+                </div>
+            </div>
+            <div class="testimonial__container">
+                <img src="assets/img/Testimonia-section/testimonial-stars.png" alt="feedback stars" class="testimonial__container--stars">
+                <p class="testimonial__container--text">Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Duis efficitur dui nec Lorem ipsum dolor sit amet, consec tetur </p>
+                <div class="testimonial__container--perfil">
+                    <img src="assets/img/Testimonia-section/testimonial-avatar-2.png" alt="Akanni Boss avatar image" class="testimonial__container--img">
+                    <h4 class="testimonial__container--name">Akanni Boss</h4>
+                    <span class="testimonial__container--work">Product Manager</span>
+                </div>
+            </div>
+            <a href="#" class="prirmary__button testimonial__button">View More</a>
         </section>
     </main>
 
