Get Started - Creating the section started HTML structure

--- a/HSLP/index.html
+++ b/HSLP/index.html
@@ -284,6 +284,30 @@
             </div>
             <a href="#" class="prirmary__button testimonial__button">View More</a>
         </section>
+        <section class="started">
+            <h2 class="section__title started__title">Get Started</h2>
+            <h3 class="section__subtitle started__subtitle">Let's Start Here! New Space for World</h3>
+            <p class="section__description started__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur adipiscing Quisque et imperdiet ipsum.</p>
+            <div class="started__container">
+                <ul class="started__container--vantages">
+                    <li class="started__container--vantage">
+                        <img src="assets/img/Started-section/started-checked-icon.png" alt="Cheked" class="started__container--vantage-check">
+                        <span class="started__container--vantage-text">Unlimited Bandwidth</span>
+                    </li>
+                    <li class="started__container--vantage">
+                        <img src="" alt="" class="started__container--vantage-check">
+                        <span class="started__container--vantage-text">Super Turbo Power</span>
+                    </li>
+                    <li class="started__container--vantage">
+                        <img src="" alt="" class="started__container--vantage-check">
+                        <span class="started__container--vantage-text">24/7 Full Support More </span>
+                    </li>
+                </ul>
+                <img src="assets/img/Started-section/started-img.png" alt="" class="started__container--img">
+            </div>
+            <a href="#" class="prirmary__button started__button--primary">Get Started</a>
+            <a href="#" class="secundary__button started__secundary--button">Hosting Plans</a>
+        </section>
     </main>
 
     <footer>
